# plover

./: README.md
app/electron-app/: main.js  package.json
app/react-app/: package.json
app/react-app/public/: index.html
image-processing/: pyproject.toml
